[package]
name = "vgp-device"
version = "0.1.0"
authors = ["Bryan Dela Cruz <bryanmdlx@gmail.com>"]
edition = "2018"

[features]
default = []
async = ["tokio"]

[dependencies]
log = "0.4.11"

[dependencies.tokio]
version = "0.3"
optional = true
default-features = false
features = ["sync", "rt-multi-thread", "macros"]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.81"
nix = "0.19.1"

[target.'cfg(target_os = "windows")'.dependencies]
vigem-client = {path = "../vigem-client"}

[target.'cfg(target_os = "macos")'.dependencies]

[build-dependencies]
bindgen = "0.56.0"

[dev-dependencies]
ctrlc = "3.1.7"
simple_logger = "1.11.0"